--- a/BasicInformation/午前/1.テクノロジ系/12.システム開発技術.md
+++ b/BasicInformation/午前/1.テクノロジ系/12.システム開発技術.md
@@ -1,3 +1,534 @@
 # システム開発技術
 
 ---
+
+## ソフトウェア要件定義
+
+**アクティビティ図**  
+ある振る舞いから次の振る舞いへの制御の流れを表現する。
+ビジネスプロセスの流れやプログラムの制御フローのような一連の手続きを可視化できる図です。
+フローチャートのUML版です。
+分岐やマージなどの他に、フォークやジョイン、タイマ制御や例外処理なども表現できるようになっています。
+
+**ユースケース図**  
+システムが外部に提供する機能と，それを利用する者や外部システムとの関係を表現する。
+
+**状態遷移図**  
+一つのオブジェクトの状態がイベントの発生や時間の経過とともにどのように変化するかを表現する。
+時間の経過や状態の変化に応じて状態が変わるようなシステムの振る舞いを記述するときに適した図式化手法です。
+プロセス制御などの事象駆動(イベントドリブン)による処理の仕様を表現するときに適しています。
+
+ 50/ジュース
+↓←←←
+↓　　↑
+○→○⇔○
+みたいな感じの図。
+
+**シーケンス図**  
+オブジェクト間の相互作用を時系列で表現する。
+横にオブジェクトを並べて縦を時系列として、左から右に矢印書いて、矢印の先の処理が終わったら左から右に矢印が戻る感じの図。
+
+**コミュニケーション図**  
+オブジェクト同士の関係の観点から表現する。
+NAPTの解説で、クライアント↔ルーター↔サーバーってあって、各時点でのIPアドレスとポート番号の状態を表現する図があったじゃない。
+あんな感じの書き方するのがコミュニケーション図。
+シーケンス図もコミュニケーション図もオブジェクト間のメッセージのやり取りを表現する図。
+
+**DFD(Data Flow Diagram)**  
+構造化分析手法の一つでデータの流れに着目して、その対象となる業務のデータの流れと処理の関係をわかりやすく図式化する手法です。
+
+○ : プロセス(処理)
+□ : データの発生源、行き先
+→ : データフロー
+＝ : データストア(一時的なデータの保管場所)
+
+□→○→＝→○→□
+みたいな感じの図。
+
+**決定表(デシジョンテーブル)**  
+条件の組合せとそれに対する動作とを表現したものである。
+ある事象について条件や選択肢を表形式で整理し、記述された条件・選択肢の組合せによってどのような処理を行うべきかを列挙したものです。
+下記の例でいえば、表中の二重線より上が条件を記述する部分で、条件が成立するときは「Y」(Yes)、不成立の時は「N」(No)を記入します。
+二重線より下が実行される処理を記述する部分で、条件の組合せによって実行すべき処理に「X」(eXecute=実行)を記入します。
+平成26年秋期　問46
+
+
+**E-R図(Entity-relationship Model)**  
+データベース化の対象となる実体（エンティティ）と実体の持つ属性（アトリビュート）、実体間の関連（リレーションシップ）を表現する図です。
+データをモデリングする方法で、関係データベースの設計によく利用されます。
+
+
+**UMLのクラス図**  
+クラス間の静的な関連を表現する図です。
+
+**集約名**  
+集約は、クラス間の「集約－分解」を表し、ひし形の白抜きを使用した矢印で記述します。
+
+**クラス名**  
+クラスは四角形で記述し、内部に、上段からクラス名、属性、操作が書かれます。(図のように属性と操作部分を省略してしまうこともあります)
+
+**ユースケース名**  
+クラス図にユースケース名は登場しません。
+
+**関連名**  
+関連は、クラス間の結びつきを表し、クラス間の実線で記述します。
+関連(association) -
+集約(aggregation) ◇-
+コンポジション(composition) ◆-
+依存(dependency) ←+点線
+汎化(generalization) ◁-
+実現(realization) ◁-+点線
+
+
+**外部設計**  
+ユーザからのシステム要件をもとにシステムの機能を確定する作業工程です。
+ユーザの立場からみた業務機能を中心に設計を行うことが目的で、この作業工程ではサブシステムの定義と機能分割，
+論理データモデル設計，画面・帳票・コードの設計などが実施されます。
+画面レイアウト等
+
+**内部設計**  
+外部設計の要件をコンピュータまたはシステム上でいかに効率よく動作させるかというシステム開発側の視点で設計が行われ、
+さらに次のプログラム設計ではプログラム内部構造の詳細設計が行われます。
+物理データベース仕様等
+
+---
+
+## ソフトウェア方式設計・詳細設計
+
+**オブジェクト指向**  
+システムの構築や設計で、そのシステムの構成を処理や操作の対象となるもの(オブジェクト)同士のやり取りの関係として捉える考え方です。
+データと手続きをひとまとまりにしてカプセル化することで実現します。
+
+**カプセル化(情報隠ぺい)**  
+オブジェクトの独立性を高めるため、内部をブラックボックス化することです。
+オブジェクトのデータとそれに対する操作をセットで定義し、外部からは特定の手続きだけの使用を許すことで実現します。
+この概念によって、たとえオブジェクト内部の仕様変更があった場合でも、使う人はそれを気にすることなく以前と同様にオブジェクトを扱えます。
+
+**多様性(ポリモルフィズム)**  
+オブジェクトへの操作呼び出しが、呼び出し側でなく受け手側の特性で決まる特性のこと。
+同じメッセージを送っても受け手によって行われる操作が異なる様子を示す。
+
+**継承(インヘリタンス)**  
+基底クラスの性質を派生クラスに受け継がせること。
+ある上位のクラスをもとに下位クラスを定義するとき、下位クラスに上位クラスの属性が引き継がれる性質のこと。
+
+**抽象化**  
+ある実体としてのオブジェクト群から共通する性質・要素・動作を引き出して、それらの事実を包括する概念を定義すること。
+例えば、人間がもつ性質を定義した人間クラスを作成すること、または人間、ゴリラ、サルから共通する要素を引き出し、霊長類クラスを作成することなどが抽象化に該当する。
+
+**具体化**  
+抽象化とは反対に、一般化されたクラスに、ある実体が持つ固有の性質・要素・動作を加えることで、その実体に特化した概念を定義すること。
+例えば、自動車クラスを特化させた、バス、トラック、自家用車などのクラスを定義することなどが具体化に該当する。
+
+**委譲(デリゲーション)**  
+あるオブジェクトに対する操作をその内部で他のオブジェクトに依頼する仕組み。
+オブジェクト指向において、あるオブジェクトに依頼されたメッセージの処理を、他のオブジェクトに委ねることをいいます。
+
+**汎化**  
+クラス間に共通する性質を抽出し，基底クラスを作ること。
+
+**クラス**  
+いくつかの似ているオブジェクトに共通する性質を抜き出して、属性・手続きを一般化(抽象化)して新しく定義したもの。
+
+**サブクラス**  
+基本クラス(スーパークラス)から派生して新しく定義されたクラスで、派生クラスや子クラスなどとも呼ばれます。
+基本クラスの属性やメソッドを継承し、それを基にサブクラス独自の特性を追加することができます。
+スーパークラスとサブクラスには「汎化－特化」関係、すなわち「サブクラスはスーパークラスである」という関係が成り立ちます。
+
+選択肢の中で「汎化－特化」関係なのは「トラックは自動車である」と言える〔エ〕だけなのでこれが正解となります。
+その他の選択肢「エンジン」「製造番号」「タイヤ」と「自動車」の関係は「×は○の一部である」という「集約－分解」関係に該当します。
+
+**オーバライド(Override)**  
+上位クラスで定義されたメソッド(メンバ関数)を、下位クラスの役割に応じて再定義することです。
+オブジェクト指向ではこの方法によって「同じメッセージを送ってもオブジェクトごとに異なる操作が行われる」特性である**多相性**を実現しています。
+「オーバー(上に)　ライド(乗る=上書きする)=>スーパークラスのメソッドを上書きする」と覚えるといいかも
+
+**オーバーロード(Overload)**  
+「引数や戻り値が異なるが名称が同一のメソッドを複数定義する」というオブジェクト指向プログラミングのテクニックである。
+「オーバー(上に) ロード(読み込む)=>メソッドを複数読み込む(上書きするわけじゃないから似たようなメソッドが沢山ある状態)」と覚えるといいかも。
+
+
+
+**インスペクション(Inspection)**  
+モデレータが全体のコーディネートを行い，参加者が明確な役割をもってチェックリストなどに基づいたコメントをし，正式な記録を残す。
+Inspection:検査、監視
+事前に役割を決められた参加者が責任のある第三者(モデレータ)の下で成果物を確認する、最も公式なレビュー技法です。
+あー、入社したときに本当にやったレビューの形式だ。
+
+通常3人から6人が参加して実施され、各参加者は、モデレータ、オーナ、インスペクタ、プレゼンタ、スクライブなどの役割を持ちます。
+他のレビュー法と比較したときのインスぺクションの特徴は以下の3点です。
+1.参加者の役割が明確になっていること
+2.チェックリストなど形式的な文書に基づいて実施すること
+3.レビュー記録を正式な形で残すこと
+
+ウォークスルーと似ているが、「モデレータ」および「参加者が明確な役割を持って」などのキーワードがあったらインスペクション。
+
+**モデレータ(Moderator)**  
+議長・司会としてインスペクション全体を運営する。
+**オーナー(Owner)**  
+レビュー対象となる成果物の作成者で、発見された問題に応じて成果物の修正を行う。
+**インスペクタ(Inspector)**  
+評価者としてレビュー対象となる成果物の問題発見を行う。
+**プレゼンタ(Presenter)**  
+ミーティングにて参加者に資料の説明を行う。
+**スクライブ(Scribe)**  
+書記としてレビューで発見された問題などを記録する。
+
+**パスアラウンド**  
+レビュー対象となる成果物を複数のレビュアに配布又は回覧して，レビュアがコメントをする。
+
+**ウォークスルー**  
+作成者を含めた複数人の関係者が参加して会議形式で行う。レビュー対象となる成果物を作成者が説明し，参加者が質問やコメントをする。
+
+**ラウンドロビン**  
+参加者が順番に司会者とレビュアになる。司会者の進行によって，レビュア全員が順番にコメントをし，全員が発言したら，司会者を交代して次のテーマに移る。
+
+
+
+**モジュール結合度**  
+モジュール同士の関連性の強さを表す概念です。
+モジュール結合度が弱いほど関連するモジュールに変更があった場合の影響を受けにくくなるので、モジュールの独立性が高まり保守性が向上します。
+
+**データ結合 (結合が弱い↑、独立性が高い↑)**  
+処理に必要なデータだけを単一のパラメータとして受け渡している。
+struct
+
+**スタンプ結合**  
+処理に必要なデータだけをレコードや構造体などのデータ構造として受け渡している。
+class
+
+**制御結合**  
+もう1つのモジュールの制御要素を受け渡している。
+他のモジュールを呼び出すときに，呼び出されたモジュールの論理を制御するための引数を渡す。
+フラグ引数とか、状態を定義したEnumを渡す見たな感じかな。
+
+**外部結合**  
+外部宣言された共通データを参照している。
+他のモジュールとデータ項目を共有するためにグローバルな領域を使用する。
+VB6のあれとかか？
+
+**共通結合**  
+共通域に宣言された共通データを参照している。
+
+**内容結合(結合が強い↓、独立性が低い↓)**  
+お互いのモジュール内部を直接参照・分析している。
+
+
+**モジュール強度**  
+
+・機能的強度
+
+・情報的強度
+
+・連絡的強度
+
+・手順的強度
+
+・時間的強度
+
+・論理的強度
+
+・暗号的強度
+
+
+
+**共通フレームによる、開発プロセスのうち設計部分**  
+「システム要件定義→システム方式設計→ソフトウェア要件定義→ソフトウェア方式設計→ソフトウェア詳細設計」の順に行われると定義されています。
+
+**ソフトウェア方式設計**  
+ソフトウェア品目に対する要件を，最上位レベルの構造を表現する方式であって，かつ，ソフトウェアコンポーネントを識別する方式に変換する。
+ソフトウェア方式設計は、ソフトウェアで実現する要件をソフトウェア方式に変換し、要件を達成するために必要なソフトウェア部品を定義するアクティビティです。
+
+作業項目
+1.ソフトウェア構造とコンポーネントの方式設計
+2.外部，コンポーネント間の各インターフェースの方式設計
+3.データベースの最上位レベルでの設計
+4.利用者文書(暫定版)の作成
+5.ソフトウェア結合のためのテスト要求事項の定義
+6.ソフトウェア方式設計の評価
+7.ソフトウェア方式設計の共同レビューの実施
+
+**要件定義プロセス**  
+顧客に意見を求めて仕様を決定する。
+
+**ソフトウェアコード作成**  
+プログラムを，コード化した1行ごとの処理まで明確になるように詳細化する。
+
+**ソフトウェア詳細設計**  
+要求内容を図表などの形式でまとめ，段階的に詳細化して分析する。
+
+---
+
+## ソフトウェア構築
+
+**ホワイトボックステスト**  
+プログラムの内部仕様に着目して行うテスト。
+・プログラムの処理手順や内部構造に基づいて，テストケースを設計する。
+・プログラムのすべての条件判定で，真と偽をそれぞれ1回以上実行させることを基準に，テストケースを設計する。
+・プログラム仕様書の作成又はコーディングが終了した段階で，仕様書やソースリストを参照して，テストケースを設計する。
+
+**命令網羅(網羅性:低い↑)**  
+すべての命令を少なくとも1回は実行する。
+命令を1回でも実行することが目的なので、判定条件の全ての組み合わせを実行する必要はない。
+Trueの先だけに命令があれば、Trueのルートだけ検証して、Falseは全く考慮しない。
+
+**分岐網羅(判定条件網羅)**  
+判定条件の真偽を少なくとも１回は実行する。
+2つ分岐があったら真-真、偽-偽の2パターンやればいいということ。
+
+**条件網羅**  
+判定条件が複数ある場合に、それぞれの条件が真・偽の場合を組み合わせたテストケースを設計する。
+お腹が空いたor嫌なことがあった→ケーキを食べる。という命題があった場合、
+お腹が空いた→YES
+
+お腹が空いた→NO
+嫌なことがあった→YES
+
+お腹が空いた→NO
+嫌なことがあった→NO
+
+の3つを調べればいいということ。
+
+**判定条件・条件網羅**  
+判定条件網羅と条件網羅を組み合わせてテストケースを設計する。
+
+**複数条件網羅(網羅性:高↓)**  
+判定条件のすべての可能な結果の組合せを網羅し、かつ、すべての命令を少なくとも1回は実行するようにテストケースを作成する。
+お腹が空いたor嫌なことがあった→ケーキを食べる。という命題があった場合、
+お腹が空いた→YES
+嫌なことがあった→YES
+
+お腹が空いた→YES
+嫌なことがあった→NO
+
+お腹が空いた→NO
+嫌なことがあった→YES
+
+お腹が空いた→NO
+嫌なことがあった→NO
+
+全て試すのが複数条件網羅。
+
+
+**ブラックボックステスト**  
+入力と出力だけに着目して様々な入力に対して仕様書どおりの出力が得られるかどうかを確認します。
+手法としては「同値分割」「限界値分析」「原因－結果グラフ」「エラー推測」などがあります。
+システムの内部構造とは無関係に外部から見た機能について検証するテスト方法です。
+したがってプログラムの内部構造とは無関係にテストケースを作成する
+→プログラムの機能仕様やインタフェースの仕様に基づいて，テストケースを設計する。
+
+ブラックボックステストではプログラムの内部構造に着目しないため、被テストプログラムに冗長なコードがあっても検出できない。
+
+同値分割と境界値分析はブラックボックステストのテストケース作成手法です。
+
+**同値分割**  
+正しい入力値のデータクラス、正しいデータ範囲の上限を超えて無効であるデータクラス、
+正しいデータ範囲の下限を下回って無効であるデータクラスの3つのデータクラスに分割し、その中から1つの代表値を選んでテストケースとする。
+入力値が整数に限定されており有効値が 0～50 である場合、「有効なデータ範囲 0～50」「有効値を下回る無効なデータ範囲 -∞～-1」「有効値を上回る無効なデータ範囲 51～∞」の中から、それぞれ適当な値を選択しテストケースとする。
+例えば、-10,30,100等がテストデータとなり得る。
+
+**境界値分析(限界値分析)**  
+同値分割と同じようにデータ範囲を「有効値」及び「有効値超過」「有効値未満」の3つに分類するところまでは同じだが、
+テストケースには有効範囲の上限値とそれを1つ上回る値、および下限値とそれを1つ下回る値を利用する。
+入力値が整数に限定されており有効値が 0～50 である場合、境界分析のテストケースには「-1, 0, 50, 51」の4つが選ばれる。
+
+
+
+**静的テストツール**  
+構文チェッカ、コードオーディタ、モジュールインターフェイスチェックツールなどのプログラムを**実行しない状態**でプログラムの検証を行うためのツール。
+構文チェッカー : プログラム中に文法上の誤りや論理的な誤りなどがあるかどうかを，ソースコードを分析して調べる。
+
+**動的テストツール**  
+インスペクタ、トレーサ、スナップショット、メモリダンプ、カバレッジモニタ、アサーションチェッカなどのプログラムを**実行しながら**検証を行うためのツール。
+カバレッジモニタ : テストの実行結果を基に，命令の網羅率や分岐の網羅率を自動的に計測し，分析する。
+プロファイラ : モジュールの呼出し回数や実行時間，実行文の実行回数などの，プログラム実行時の動作特性に関するデータを計測する。
+
+**環境設定ツール**  
+テストベッドツール、テストデータ生成ツールなどのテスト環境を準備するためのツール。
+テストケース作成ツール : 指定された条件のテストデータや，プログラムの入力ファイルを自動的に生成する。
+テストベッドツール : テスト対象モジュールに必要なドライバ又はスタブを生成する。
+
+
+**バグ管理図**  
+縦軸に検出バグ数、横軸にテストに要した時間またはテスト消化件数をとり、
+一般的な信頼度曲線(S字カーブ)と比較することでプログラムの品質を判断するために用いられるグラフです。
+テストの対象が設計・開発が問題なく進んだシステム／ソフトウェアであり、テストの質が妥当であれば、テストの中盤以降では内在するバグが徐々に少なっていくためバグの検出数は少なくなっていきます。
+
+しかし図を見ると X の時点でのテスト当たりのバグの検出数がテスト初期と比較しても増加傾向にあることがわかります。
+これはテスト対象の品質が著しく悪く、未だバグが数多く内在することを示しています。
+
+
+令和元年秋期　問47
+埋め込まれたエラー数をS，埋め込まれたエラーのうち発見されたエラー数をm，埋め込まれたエラーを含まないテスト開始前の潜在エラー数をT，発見された総エラー数をnとしたとき，S，T，m，nの関係を表す式はどれか。  
+→
+$m/S=n−m/T$
+→
+埋め込んだエラー:S | 潜在エラー:T
+　　　　　　　　↓ | ↓
+　　　　　　　　m　| x
+　　　　　発見エラー総数:n
+
+潜在エラーのうちテストで発見されたエラー数 = n－m (発見された総エラー数－埋め込まれたエラーのうち発見されたエラー数)
+
+埋め込まれたエラーの発見率$m/S$ と潜在エラーの発見率$n-m/T$は同程度と考えられるので、 $m/S=n−m/T$ の関係式が成り立ちます。
+
+---
+
+## ソフトウェア結合・適格性テスト
+
+**トップダウンテスト**  
+上位モジュールをテストするテスト。
+下位モジュールは未完成なので、代わりのモジュールであるスタブを使って適当な値を返してもらって、上位モジュールのテストを行う。
+後ろから指す、もとい上に指すので、スタブという言葉はピッタリ。
+トップダウンなので上から下にテストしていくイメージ。なので下から突き刺していく。
+
+**ボトムアップテスト**  
+下位モジュールをテストするテスト。
+上位モジュールが未完成なので、代わりのモジュールであるドライバを使って適切に呼び出してもらって、下位モジュールのテストを行う。
+
+モジュールの結合テストを行う場合に、モジュール構成の下位のモジュールから上位のモジュールへと順に結合しながらテストをしていく手法です。
+未完成の上位モジュールの代わって下位モジュールの手続きを呼び出すドライバとよばれるテスト用のモジュールが必要になります。
+
+テスト済みの上位モジュールが必要である。
+上位モジュールはテスト用モジュール(ドライバ)を使用します。
+
+開発の初期の段階では，並行作業が困難である。
+開発初期の段階から下位モジュールを並行開発することが可能です。
+
+**スタブ**  
+モジュール結合テストの手法であるトップダウンテストにおいて必要となるテスト用のモジュールです。
+未完成の下位モジュールの代わりとして、テスト対象の上位モジュールからの呼び出しに対して、下位モジュールが返すべき適切な値を返却するなどの役割を担います。
+
+**ドライバ**  
+未完成の上位モジュールに代わり、テスト対象の下位モジュールに適切な引数を与えて呼び出すなどの役割を担います。
+
+
+**状態遷移テスト**  
+設計されたイベントと内部状態の組合せどおりにシステムが動作することを確認する手法。
+設計段階でシステム要求事項をもとに作成した「状態遷移図」「状態遷移表」を使用して、システムが正しく挙動するかを検証するホワイトボックステストの手法です。
+状態遷移図は、文章だけによる仕様書よりもシステムの持つ機能や全体像を感覚的に把握しやすくする役割を持ちます。
+さらに状態遷移表は、システムの内部状態とイベントの組合せを漏れなくリストアップできるため、正常な動作だけでなく不正な遷移についても可視化できるメリットがあります。
+この2つを組み合わせることで仕様書の漏れ・抜けをテストで発見しやすくし開発作業の手戻りを少なくする目的があります。
+
+
+---
+
+## 保守・廃棄
+
+**リグレッションテスト**  
+退行テスト／回帰テストとも呼ばれ、システムに変更作業を実施した場合に、
+それによって以前まで正常に機能していた部分に不具合や影響が出ていないかを検証するためのテストです。
+
+**運用テスト**  
+システムの運用者が業務の流れに沿ってシステムのテストを行い、実際の稼働状況において不具合が発生しないかを検証するために実施されます。
+業務の担当者がシステムの操作に慣れることも目的の一つです。
+
+**結合テスト**  
+単体テストが終了したモジュール同士を組み合わせて行うテストで、主にモジュール間のインターフェイス(接点)が設計通りに機能するかを検証するために実施されます。
+
+**システムテスト**  
+システムとしての要件が満たされているかを検証するために行われるテストで、システム要件定義で定められた機能や能力がすべて備わっているかを確認する工程です。
+
+
+平成31年春期　問49
+条件に従うとき，アプリケーションプログラムの初年度の修正費用の期待値は，何万円か。
+
+〔条件〕
+1.プログラム規模：2,000kステップ
+2.プログラムの潜在不良率：0.04件／kステップ
+3.潜在不良の年間発見率：20％／年
+4.発見した不良の分類
+→影響度大の不良：20％，影響度小の不良：80％
+5.不良1件当たりの修正費用
+→影響度大の不良：200万円，影響度小の不良：50万円
+6.初年度は影響度大の不良だけを修正する
+
+→
+
+プログラムの潜在不良率は1kステップ当たり0.04件なので、2,000kステップであるアプリケーションプログラムに含まれる総不良数は、以下のように計算できます。
+　2,000×0.04件＝80個
+このうち1年間に発見される不良数は全体の20%なので、初年度に発見される不良数は、
+　80個×0.2＝16個
+条件(6)より、初年度に修正対象となるのは影響度大の不良だけとわかります。不良数のうち影響度大の不良は、発見した不良数全体の20%なので、
+　16個×0.2＝3.2個
+影響度大の不良には1個当たり200万円の修正費用が掛かるので、修正費用の期待値は、
+　3.2個×200万円＝640万円
+
+→
+
+なぜか正解した。
+3番目の20%/年を2000kステップに対して当てはめるのか求めた80件に対して使うのか怪しかったが、
+2000kに使うと数字がすごそうだったので、80件に使ってそのまま最後までやったらそれっぽい数字になった。
+なので意味はわかっていないので解説を読むことにする。
+
+---
+
+## 1回目に間違えた問題
+
+平成27年秋期　問48
+ボトムアップテストの特徴として，適切なものはどれか。
+→
+ボトムアップということは下からやっていくということ、下といえばスタブっぽいなと思っていたが、
+そもそも細かい用語を忘れているので正解するはずもなく。
+ドライバ、モジュール、スタブを改めて確認する必要がある。
+
+
+
+平成29年春期　問47
+ソフトウェアのレビュー方法の説明のうち，インスペクションはどれか。
+→
+アジャイルですねー。
+レトロスペクティブが振り返りって意味だった気がする。
+作成者自らが説明するのがウォークスルー。
+インスペクションは毎回忘れる。
+Inspection : 検査
+ざっくり言えば、会議で成果物を確認する人見たいですよ。
+
+
+
+平成27年春期　問49
+図は，テスト項目消化件数 X において，目標値として設定したバグ累積件数に到達したことを示す。この図の状況の説明として，適切なものはどれか。
+→
+目標として設定下件数に到達→テスト前段階での机上チェックやシミュレーションが十分にされていることを示す。
+と思ったが、普通にまだまだバグがあるはずって答えだった。
+バグの曲線ってS字になった気がする。それさえ覚えておけば、まだまだ出るって結論になるか。
+
+
+
+平成26年春期　問46
+UMLにおける図の　の中に記述するものはどれか。
+→
+平成26年の問題ってなんか難しくないか？
+単純な問題なはずなのに、知らないから全然応えられない事ばかりなのだが。
+□で囲われている。汎化の矢印があったりしたらクラス図。
+クラス図は属性と操作もあるけど省略可能なので、ただの□にクラス名だけってパターンもあるみたいね。
+
+
+
+平成27年春期　問50
+図の構造をもつプログラムに対して，ホワイトボックステストのテストケースを設計するとき，少なくとも実施しなければならないテストケース数が最大になるテスト技法はどれか。
+→
+ホワイトボックステストの条件網羅系を覚える必要がある。
+
+
+
+平成29年春期　問49
+流れ図において，判定条件網羅(分岐網羅)を満たす最少のテストケース数は幾つか。
+→
+言ったそばから間違えた。
+やっぱり理解できてねーじゃん。
+
+
+
+平成26年秋期　問47
+多相性を実現するときに，特有のものはどれか。
+→
+多相性ってなんやねん。始めて聞いたで。26年か。いい加減にしろよ。
+
+
+平成31年春期　問48
+ソフトウェアのテストツールの説明のうち，静的テストを支援する静的解析ツールのものはどれか。
+→
+静的テスト、静的解析ツール。
+まさか、プログラムの文法上の誤り訂正まで範囲だとは思わなんだ。
+でも、よく見ると論理的な誤りが～ってあるから、もしかしてこのことを言っているのだろうか。
