--- a/BasicInformation/午前/1.テクノロジ系/4.システム構成要素.md
+++ b/BasicInformation/午前/1.テクノロジ系/4.システム構成要素.md
@@ -2,4 +2,70 @@
 
 ---
 
+## システムの構成
+
+**クライアントサーバシステム(client-server system:C/S)**
+サービスを要求する側であるクライアントと、サービスを提供するサーバに分離したコンピュータネットワークの形態です。
+3層クライアントサーバシステムでは、ユーザの入出力を担当する「プレゼンテーション層」、業務処理に依存するデータ加工を行う「ファンクション層」、
+データベース処理を行う「データ層」の3層に分離したモデルです。
+
+一般にWeb3層クライアントシステムは、
+・プレゼンテーション層＝Webブラウザ
+・ファンクション層＝Webサーバ
+・データ層＝DBMSとデータベース
+の組合せで構成され、それぞれの層に伝達しながら処理が行われます。
+ブラウザは利用者の入力をサーバに送信する(HTTP要求)。
+WebサーバではHTTP要求を処理し、データの読み書きをデータベース(DBMS)に要求する。
+DBMSはデータベースにアクセスし、結果をWebサーバに返す。
+WebサーバではDBMSから得られた結果に応じてHTMLページを構成し、付加情報とともにクライアントに返信する(HTTP応答)。
+ブラウザはWebサーバからのHTTP応答を解釈し、結果を画面に出力する。
+
+---
+
+## システムの評価指標
+
+**スループット**
+システムで単位時間当たりに処理される仕事の量を表します。
+データ処理におけるスループットには、コンピュータに搭載されるCPUのクロック周波数やハードディスクの回転速度、OSなど、様々な要因が影響し、
+システムのパフォーマンスの評価基準となります。
+
+処理が遅いプリンタの出力に合わせてCPUがデータ転送処理を行うと、CPUに遊休時間が生じてしまいます。そこで一度出力データを補助記憶装置へ転送し、
+補助記憶装置からプリンタにデータを転送することで、CPUは即座に次の処理にうつることができます。(スプーリング処理)
+これによってCPUの空き時間が減少し、有効に使うことができるのでスループットは向上が見込めます。
+
+「スプーリングはスループットを向上させる。」は、情報処理技術者試験の各区分で繰り返し出題されている定番中の定番問題です。覚えておきましょう。
+
+
+**ベンチマークテスト**
+使用目的に合わせて選定した標準的なプログラムを実行させ，その処理性能を測定する。
+システムの使用目的に合わせたプログラム、あるいは評価対象の業務の典型的な処理プログラムを用いて、
+入出力や制御プログラムを含めたシステムの総合的な処理性能を測定する性能評価手法です。
+
+代表的なベンチマークにSPEC，TPCなどがあります。
+**SPEC**
+プロセッサの性能を評価するベントマークテストで、整数演算の性能を評価するSPECint、浮動小数点演算能力を評価するSPECfpがある。
+**TPC**
+オンライントランザクション処理システムの性能を評価するベンチマークテスト
+
+**シミュレーション**
+将来の予測を含めて評価する場合などに，モデルを作成して模擬的に実験するプログラムでシステムの性能を評価する。
+
+**静的積算**
+プログラムを実際には実行せずに，机上でシステムの処理を解析して，個々の命令の出現回数や実行回数の予測値から処理時間を推定し，性能を評価する。
+
+**モニタリング**
+監視・計測用のプログラムによってシステムの稼働状態や資源の状況を測定し，システム構成や応答性能のデータを得る。
+
+---
+
 ## 1回目に間違えた問題
+
+平成29年春期　問13
+ベンチマークテストの説明として，適切なものはどれか。
+
+→
+
+いきなり間違えました。
+そうですよね。使用目的に合わせたプログラムで計測するものですよね。
+でも、監視・計測用のプログラムって文言も紛らわしくて仕方がないのだが。
+あー、でもシステムの稼働状態や資源の状況ってあるので、テストする主体が違いますね。
