8月26日朝の分

--- a/BasicInformation/午前/1.テクノロジ系/4.システム構成要素.md
+++ b/BasicInformation/午前/1.テクノロジ系/4.システム構成要素.md
@@ -20,6 +20,60 @@ DBMSはデータベースにアクセスし、結果をWebサーバに返す。
 WebサーバではDBMSから得られた結果に応じてHTMLページを構成し、付加情報とともにクライアントに返信する(HTTP応答)。
 ブラウザはWebサーバからのHTTP応答を解釈し、結果を画面に出力する。
 
+
+**RAID**
+
+・RAID0(ストライピング)
+複数のディスクに分散してデータを書き込むことで、アクセス性能を向上させる。
+
+・RAID1(ミラーリング)
+同じデータを2台のディスクに書き込むことで、信頼性を向上させる。実質記憶容量は50%となるので記憶効率は悪い。
+
+・RAID2
+データにエラー訂正用のハミング符号を付加したものをストライピングで書き込む。
+
+・RAID3
+データのエラー訂正用にパリティビットを使用し、一つのディスクをエラー訂正符号の書き込み専用とする。
+
+・RAID4
+RAID3とほぼ同じ。RAID3でビット/バイト単位だったストライピングをブロック単位で行う。
+
+・RAID5
+情報データとともにパリティビットも各ディスクに分散して書き込む方式。信頼性、アクセス性能が共に高まる。
+
+ストライピング単位
+      単位     構成
+RAID3 ビット   固定
+RAID4 ブロック 固定
+RAID5 ブロック 分散
+
+ストライピングという言葉に意味はなく、単純にRAID0の別名みたいだ。
+RAID0がストライピングであり、ストライピングといったらRAID0の関係らしい。
+因みに、分散してデータを書き込むと速度が早くなるらしいが、
+これは両手にペンを持って10までの数字を右のノートは偶数、左のノートには奇数を書くイメージをいいかも？
+両方に同時に書き込むので、1から順番に1冊のノートに書きこむよりも早く書き込める。
+正し、どちらか一方が死んだ途端、意味をなさなくなるので信頼性は低いというわけだ。
+
+
+**ストライピング**
+データを細分化して複数台の磁気ディスクに格納すること。
+性能向上を目的とした「RAID0」に相当し、各データディスクに並列にアクセスを行うことで読み書き速度の向上が望めます。
+
+**ミラーリング**
+ミラーリングは、RAID1に相当し、2台のディスクに同じデータを書き込む方式です。片方のディスクに障害が起きても復旧が可能なのでディスクの信頼性が向上します。
+
+**ブロック化**
+ブロック化は、複数のレコードを一定数ごとにまとめることです。1レコードごと読み書きするよりも、ブロック単位でアクセスすることで処理効率を向上させます。
+
+
+
+**ストアドプロシージャ**
+データベースに対する一連の処理をまとめた手続きにして、データベース管理システムに保存したものです。
+利用者は通常のクエリを発行する代わりに、データベース管理システム内の手続きを呼び出すことによって目的の処理を実行させることができます。
+
+クライアントからサーバに対してのストアドプロシージャ1回の要求で、データベースに複数のクエリを発行することができるので、クライアントから直に同数のクエリを発行する場合と比較して、クライアント－サーバ間のネットワーク負荷の軽減が期待できます。
+
+
 ---
 
 ## システムの評価指標
@@ -34,6 +88,29 @@ WebサーバではDBMSから得られた結果に応じてHTMLページを構成
 これによってCPUの空き時間が減少し、有効に使うことができるのでスループットは向上が見込めます。
 
 「スプーリングはスループットを向上させる。」は、情報処理技術者試験の各区分で繰り返し出題されている定番中の定番問題です。覚えておきましょう。
+
+
+
+**MTBF(Mean Time Between Failure)**
+平均故障間隔。故障が回復してから次に故障するまでの平均時間のこと。
+
+**MTTR(Mean Time To Repair)**
+平均修復時間。故障が発生したときに復旧に要する平均時間のこと。
+
+
+**M/M/1の待ち行列モデル**
+利用率(CPU利用率)※がρ(ロー)の時の平均応答時間は次の式で計算することができます。
+※利用率…単位時間当たりに処理の窓口を利用している割合。この設問ではCPU使用率を利用率に置き換えて説明してます。
+
+$ρ/1-ρ * 平均サービス時間 + 平均サービス時間$
+
+仮に平均サービス時間を1として利用率(ρ)の値を変化させていくと、
+0.2 のとき　1.25
+0.4 のとき　1.66…
+0.5 のとき　2.00
+0.7 のとき　3.33…
+0.9 のとき　10.00
+と、利用率が上がるにつれて加速度的に平均応答時間が増加していくことがわかります。
 
 
 **ベンチマークテスト**
